add controller navigation logic

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/Server.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\ahmed\\Downloads\\Tic-Tac-Toy-JavaFx--main\\Tic-Tac-Toy-JavaFx--main\\ServerSide\\dist\\lib\\controlsfx-8.40.11.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.JAVADB_DRIVER_LABEL.classpath}
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +81,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=server.Server
+javafx.main.class=Model.Server
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
